--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!--Нормализация стилей-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+
     <!--Подключены стили-->
     <link rel="stylesheet" href="./css/style.css" />
+
+    <!--temporary-->
+    <link rel="stylesheet" href="./css/flexbox_index.css" />
 
     <!--Подключены шрифты Roboto 400 500 700 900-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,168 +39,183 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <a class="header-logo" href="" lang="en"><span class="header-logo-accent">Web</span>Studio</a>
-      <nav class="header-nav">
-        <ul class="header-nav-list">
-          <li class="header-nav-item">
-            <a class="header-nav-link current-page" href="">Студия</a>
+      <div class="container">
+        <a class="header-logo" href="" lang="en"
+          ><span class="header-logo-accent">Web</span>Studio</a
+        >
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link current-page" href="">Студия</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-nav-item"><a class="header-nav-link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts-list">
+          <li class="header-contacts-item">
+            <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="header-nav-item">
-            <a class="header-nav-link" href="./portfolio.html">Портфолио</a>
+          <li class="header-contacts-item">
+            <a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
-          <li class="header-nav-item"><a class="header-nav-link" href="">Контакты</a></li>
         </ul>
-      </nav>
-      <ul class="header-contacts-list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <!--MAIN-->
     <main>
       <!--Hero-->
-      <section class="section-hero">
-        <h1 class="section-hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <button class="section-hero-button" type="button">Заказать услугу</button>
+      <section class="section-hero section">
+        <div class="container">
+          <h1 class="section-hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+          <button class="section-hero-button" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!--Особенности-->
-      <section class="section-specials">
-        <h2 hidden>Особенности</h2>
-        <ul class="section-specials-list">
-          <li class="section-specials-item">
-            <h3 class="section-specials-item-title">Внимание к деталям</h3>
-            <p class="section-specials-item-description">
-              Идейные соображения, а так же начало повседневной работы по формированию позиции
-            </p>
-          </li>
-          <li class="section-specials-list">
-            <h3 class="section-specials-item-title">Пуктуальность</h3>
-            <p class="section-specials-item-description">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="section-specials-list">
-            <h3 class="section-specials-item-title">Планирование</h3>
-            <p class="section-specials-item-description">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="section-specials-list">
-            <h3 class="section-specials-item-title">Современные технологии</h3>
-            <p class="section-specials-item-description">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section-specials section">
+        <div class="container">
+          <h2 hidden>Особенности</h2>
+          <ul class="section-specials-list">
+            <li class="section-specials-item">
+              <h3 class="section-specials-item-title">Внимание к деталям</h3>
+              <p class="section-specials-item-description">
+                Идейные соображения, а так же начало повседневной работы по формированию позиции
+              </p>
+            </li>
+            <li class="section-specials-item">
+              <h3 class="section-specials-item-title">Пуктуальность</h3>
+              <p class="section-specials-item-description">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="section-specials-item">
+              <h3 class="section-specials-item-title">Планирование</h3>
+              <p class="section-specials-item-description">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="section-specials-item">
+              <h3 class="section-specials-item-title">Современные технологии</h3>
+              <p class="section-specials-item-description">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Чем мы занимаемся-->
-      <section class="section-tasks">
-        <h2 class="section-tasks-title">Чем мы занимаемся</h2>
-        <ul class="section-tasks-list">
-          <li class="section-tasks-item">
-            <img
-              class="section-tasks-item-img"
-              src="./images/img_skills_1.jpg"
-              alt="планшет"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="section-tasks-item">
-            <img
-              class="section-tasks-item-img"
-              src="./images/img_skills_2.jpg"
-              alt="ноутбук"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="section-tasks-item">
-            <img
-              class="section-tasks-item-img"
-              src="./images/img_skills_3.jpg"
-              alt="цветовая схема"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="section-tasks section">
+        <div class="container">
+          <h2 class="section-tasks-title">Чем мы занимаемся</h2>
+          <ul class="section-tasks-list">
+            <li class="section-tasks-item">
+              <img
+                class="section-tasks-item-img"
+                src="./images/img_skills_1.jpg"
+                alt="планшет"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="section-tasks-item">
+              <img
+                class="section-tasks-item-img"
+                src="./images/img_skills_2.jpg"
+                alt="ноутбук"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="section-tasks-item">
+              <img
+                class="section-tasks-item-img"
+                src="./images/img_skills_3.jpg"
+                alt="цветовая схема"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Наша команда-->
-      <section class="section-team">
-        <h2 class="section-team-title">Наша команда</h2>
-        <ul class="section-team-list">
-          <li class="section-team-item">
-            <img
-              class="section-team-item-img"
-              src="./images/img_team_igor_demyanenko.jpg"
-              alt="product designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-team-name">Игорь Демьяненко</h3>
-            <p class="section-team-description" lang="en">Product Designer</p>
-          </li>
-          <li class="section-team-item">
-            <img
-              class="section-team-item-img"
-              src="./images/img_team_olga_repyna.jpg"
-              alt="front development"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-team-name">Ольга Репина</h3>
-            <p class="section-team-description" lang="en">Front Development</p>
-          </li>
-          <li class="section-team-item">
-            <img
-              class="section-team-item-img"
-              src="./images/img_team_nikolay_tarasov.jpg"
-              alt="Marketing"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-team-name">Николай Тарасов</h3>
-            <p class="section-team-description" lang="en">Marketing</p>
-          </li>
-          <li class="section-team-item">
-            <img
-              class="section-team-item-img"
-              src="./images/img_team_Myhailo_Ermakov.jpg"
-              alt="ui designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-team-name">Михаил Ермаков</h3>
-            <p class="section-team-description" lang="en">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section-team section">
+        <div class="container">
+          <h2 class="section-team-title">Наша команда</h2>
+          <ul class="section-team-list">
+            <li class="section-team-item">
+              <img
+                class="section-team-item-img"
+                src="./images/img_team_igor_demyanenko.jpg"
+                alt="product designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-team-name">Игорь Демьяненко</h3>
+              <p class="section-team-description" lang="en">Product Designer</p>
+            </li>
+            <li class="section-team-item">
+              <img
+                class="section-team-item-img"
+                src="./images/img_team_olga_repyna.jpg"
+                alt="front development"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-team-name">Ольга Репина</h3>
+              <p class="section-team-description" lang="en">Front Development</p>
+            </li>
+            <li class="section-team-item">
+              <img
+                class="section-team-item-img"
+                src="./images/img_team_nikolay_tarasov.jpg"
+                alt="Marketing"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-team-name">Николай Тарасов</h3>
+              <p class="section-team-description" lang="en">Marketing</p>
+            </li>
+            <li class="section-team-item">
+              <img
+                class="section-team-item-img"
+                src="./images/img_team_Myhailo_Ermakov.jpg"
+                alt="ui designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-team-name">Михаил Ермаков</h3>
+              <p class="section-team-description" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--FOOTER-->
     <footer class="footer">
-      <a class="footer-logo" href="" lang="en"><span class="footer-logo-accent">Web</span>Studio</a>
-
-      <address class="footer-address">
-        <p class="footer-address-item_location">г.Киев, пр-т Леси Украинки, 26</p>
-        <ul class="footer-address-list">
-          <li class="footer-address-item">
-            <a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="footer-address-item">
-            <a class="footer-address-link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="footer-logo" href="" lang="en"
+          ><span class="footer-logo-accent">Web</span>Studio</a
+        >
+        <address class="footer-address">
+          <p class="footer-address-item_location">г.Киев, пр-т Леси Украинки, 26</p>
+          <ul class="footer-address-list">
+            <li class="footer-address-item">
+              <a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="footer-address-item">
+              <a class="footer-address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
