--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <div class="container">
+      <div class="container flex">
         <a class="header-logo" href="" lang="en"
           ><span class="header-logo-accent">Web</span>Studio</a
         >
@@ -119,7 +119,6 @@
                 src="./images/img_skills_1.jpg"
                 alt="планшет"
                 width="370"
-                height="294"
               />
             </li>
             <li class="section-tasks-item">
@@ -128,7 +127,6 @@
                 src="./images/img_skills_2.jpg"
                 alt="ноутбук"
                 width="370"
-                height="294"
               />
             </li>
             <li class="section-tasks-item">
@@ -137,7 +135,6 @@
                 src="./images/img_skills_3.jpg"
                 alt="цветовая схема"
                 width="370"
-                height="294"
               />
             </li>
           </ul>
