--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <div class="container">
+      <div class="container flex">
         <a class="header-logo" href="" lang="en"
           ><span class="header-logo-accent">Web</span>Studio</a
         >
