--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!--MAIN-->
     <main>
       <!--Hero-->
-      <section class="section-hero section">
+      <section class="section-hero">
         <div class="container">
           <h1 class="section-hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button class="section-hero-button" type="button">Заказать услугу</button>
@@ -151,8 +151,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-team-name">Игорь Демьяненко</h3>
-              <p class="section-team-description" lang="en">Product Designer</p>
+              <div class="collegues">
+                <h3 class="section-team-name">Игорь Демьяненко</h3>
+                <p class="section-team-description" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img
@@ -162,8 +164,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-team-name">Ольга Репина</h3>
-              <p class="section-team-description" lang="en">Front Development</p>
+              <div class="collegues">
+                <h3 class="section-team-name">Ольга Репина</h3>
+                <p class="section-team-description" lang="en">Front Development</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img
@@ -173,8 +177,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-team-name">Николай Тарасов</h3>
-              <p class="section-team-description" lang="en">Marketing</p>
+              <div class="collegues">
+                <h3 class="section-team-name">Николай Тарасов</h3>
+                <p class="section-team-description" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img
@@ -184,8 +190,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-team-name">Михаил Ермаков</h3>
-              <p class="section-team-description" lang="en">UI Designer</p>
+              <div class="collegues">
+                <h3 class="section-team-name">Михаил Ермаков</h3>
+                <p class="section-team-description" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -201,10 +209,10 @@
         <address class="footer-address">
           <p class="footer-address-item_location">г.Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-address-list">
-            <li class="footer-address-item">
+            <li class="footer-address-item-email">
               <a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="footer-address-item">
+            <li class="footer-address-item-phone">
               <a class="footer-address-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
