--- a/portfolio.html
+++ b/portfolio.html
@@ -67,139 +67,155 @@
       <!--Фильтры и Проектны-->
       <section class="section-filters-portfolio section">
         <div class="container">
-          <ul class="section-filters-portfolio-list">
-            <li class="section-filters">
-              <h2 hidden>Фильтры</h2>
-              <ul class="section-filters-btn-list">
-                <li class="section-filters-btn-list-item">
-                  <button class="section-filters-btn-list-btn" type="button">Все</button>
-                </li>
-                <li class="section-filters-btn-list-item">
-                  <button class="section-filters-btn-list-btn" type="button">Веб-сайты</button>
-                </li>
-                <li class="section-filters-btn-list-item">
-                  <button class="section-filters-btn-list-btn" type="button">Приложения</button>
-                </li>
-                <li class="section-filters-btn-list-item">
-                  <button class="section-filters-btn-list-btn" type="button">Дизайн</button>
-                </li>
-                <li class="section-filters-btn-list-item">
-                  <button class="section-filters-btn-list-btn" type="button">Маркетинг</button>
-                </li>
-              </ul>
+          <!--<ul class="section-filters-portfolio-list">-->
+          <!--<li class="section-filters">-->
+          <h2 hidden>Фильтры</h2>
+          <ul class="section-filters-btn-list">
+            <li class="section-filters-btn-list-item">
+              <button class="section-filters-btn-list-btn" type="button">Все</button>
             </li>
-
-            <li class="section-portfolio">
-              <h2 hidden>Портфолио</h2>
-              <ul class="section-portfolio-list">
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project1.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title">Технокряк</h3>
-                  <p class="section-portfolio-item-description">Веб-сайт</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project2.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title">
-                    Постер<span lang="en">New Orlean vs Golden Star</span>
-                  </h3>
-                  <p class="section-portfolio-item-description">Дизайн</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project3.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title">
-                    Ресторан <span lang="en">Seafood</span>
-                  </h3>
-                  <p class="section-portfolio-item-description">Приложение</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project4.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title">Проект <span lang="en">Prime</span></h3>
-                  <p class="section-portfolio-item-description">Маркетинг</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project5.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title">Проект <span lang="en">Boxes</span></h3>
-                  <p class="section-portfolio-item-description">Приложение</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project6.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title" lang="en">Inspiration has no Borders</h3>
-                  <p class="section-portfolio-item-description">Веб-сайт</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project7.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title">
-                    Издание <span lang="en">Edition</span>
-                  </h3>
-                  <p class="section-portfolio-item-description">Дизайн</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project8.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title">Проект <span lang="en">LAB</span></h3>
-                  <p class="section-portfolio-item-description">Маркетинг</p>
-                </li>
-                <li class="section-portfolio-item">
-                  <img
-                    class="section-portfolio-item-img"
-                    src="./images/img_project9.jpg"
-                    alt=""
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="section-portfolio-item-title" lang="en">Growing Business</h3>
-                  <p class="section-portfolio-item-description">Приложение</p>
-                </li>
-              </ul>
+            <li class="section-filters-btn-list-item">
+              <button class="section-filters-btn-list-btn" type="button">Веб-сайты</button>
+            </li>
+            <li class="section-filters-btn-list-item">
+              <button class="section-filters-btn-list-btn" type="button">Приложения</button>
+            </li>
+            <li class="section-filters-btn-list-item">
+              <button class="section-filters-btn-list-btn" type="button">Дизайн</button>
+            </li>
+            <li class="section-filters-btn-list-item">
+              <button class="section-filters-btn-list-btn" type="button">Маркетинг</button>
             </li>
           </ul>
+          <!--</li>-->
+
+          <!--<li class="section-portfolio">-->
+          <h2 hidden>Портфолио</h2>
+          <ul class="section-portfolio-list">
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project1.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title">Технокряк</h3>
+                <p class="section-portfolio-item-description">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project2.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title">
+                  Постер<span lang="en">New Orlean vs Golden Star</span>
+                </h3>
+                <p class="section-portfolio-item-description">Дизайн</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project3.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title">
+                  Ресторан <span lang="en">Seafood</span>
+                </h3>
+                <p class="section-portfolio-item-description">Приложение</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project4.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title">Проект <span lang="en">Prime</span></h3>
+                <p class="section-portfolio-item-description">Маркетинг</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project5.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title">Проект <span lang="en">Boxes</span></h3>
+                <p class="section-portfolio-item-description">Приложение</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project6.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title" lang="en">Inspiration has no Borders</h3>
+                <p class="section-portfolio-item-description">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project7.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title">Издание <span lang="en">Edition</span></h3>
+                <p class="section-portfolio-item-description">Дизайн</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project8.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title">Проект <span lang="en">LAB</span></h3>
+                <p class="section-portfolio-item-description">Маркетинг</p>
+              </div>
+            </li>
+            <li class="section-portfolio-item">
+              <img
+                class="section-portfolio-item-img"
+                src="./images/img_project9.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
+              <div class="card">
+                <h3 class="section-portfolio-item-title" lang="en">Growing Business</h3>
+                <p class="section-portfolio-item-description">Приложение</p>
+              </div>
+            </li>
+          </ul>
+          <!--</li>-->
+          <!--</ul>-->
         </div>
       </section>
     </main>
@@ -213,10 +229,10 @@
         <address class="footer-address">
           <p class="footer-address-item_location">г.Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-address-list">
-            <li class="footer-address-item">
+            <li class="footer-address-item-email">
               <a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="footer-address-item">
+            <li class="footer-address-item-phone">
               <a class="footer-address-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
